--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <header>
       <!-- Header innhold: Logo, navigasjon, innlogging, søk -->
-      <div class="headerLogo">JH</div>
+      <div class="headerLogo">JGL</div>
       <nav>
         <ul class="navigationList">
-          <li>Nav 1</li>
-          <li>Nav 2</li>
-          <li>Nav 3</li>
+          <li><button>Kontakt</button></li>
+          <li><button>Hardware</button></li>
+          <li><button>Software</button></li>
         </ul>
       </nav>
     </header>
@@ -27,36 +27,37 @@
       <!-- Main innhold: Hoved informasjon delt i seksjon inndelinger -->
       <section class="hero">
         <!-- Hjem -->
-        <h1>Lorem, ipsum dolor.</h1>
+        <h1>Joachim's hjemmeside</h1>
         <div class="heroIntro">
           <img src="" alt="Profilbilde">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, quis.</p>
+          <p>Her kommer informasjon om noen av mine prosjekter</p>
         </div>
       </section>
       
       <section>
         <!-- Om meg -->
-        <h2>Lorem ipsum dolor sit.
+        <h2>Om meg
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, fugit.
+        <p>Mine hovedinteresser dreier seg rundt kreativitet
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.
+        <p>Musikk, lyd og skulpturell kunst er det jeg fokuserer på for tiden
         </p>
       </section>
 
       <section>
         <!-- Prosjekter -->
         <div>
-          <h3>Prosjekt overskrift</h3>
+          <h3>Akkustiske trommer som inputcontroller for generativ musikk</h3>
           <img src="" alt="Prosjektbilde">
-          <p>Prosjekt tekst</p>
+          <p>Mitt nyeste prosjekt er å bruke triggersignaler, MIDI og audio fra akustiske trommer som input i Bitwig for å påvirke sekvenser og lyd. 
+            <br>Dette vil bli fortløpende dokumentert etterhvert som prosjektet utvikler seg.</p>
         </div>
       </section>
     </main>
 
     <footer>
       <!-- Footer innhold: Kreditasjon, navigasjon, vilkår -->
-      <h3>Laget av Julie Hauge</h3>
+      <h3>Laget av Joachim Gjøvåg Liseth</h3>
       <div>
         <p>Finn meg på github</p>
         <img src="" alt="Github logo" />
