--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div>
           <h3>Sculptural Art</h3>
-          <img src="keramikk.jpg" alt="Prosjektbilde">
+          <img src="Keramikk.jpg" alt="Prosjektbilde">
           <p>Here you can view some of my sculptural works. Mainly Ceramics. 
             </p>
         </div>
